# lab

./: .gitignore  README.md
00-trition-tts-vits/01-warming-up-resnet-trition-docker/: 1.0.serve-resnet50-trition-docker.ipynb  README.md
00-trition-tts-vits/02-tts-vits-docker-trition/: 0.0-create-tts-vits-model.ipynb  1.0-serve-tts-vits-trition-docker.ipynb  1.1-padding-tts-vits-trition-docker.ipynb  1.2-benchmarking-trition-docker.ipynb  2.0-create-multimodel-endpoint.ipynb  README.md
00-trition-tts-vits/resnet-trition-docker/: 1.0.serve-resnet50-trition-docker.ipynb
01-inferentia-stt-vits/vits/: compile.out  models.py  vits.code-workspace
01-inferentia-tts-vits/vits/: inference.ipynb
02-stt-virs-onnx/MMS/: README.md  (+3 more)
03-yolo8-inf1/: Yolov8.ipynb
06-grpo-deepseek-sm-script-mode/: README.md
09-How-to-set-EFA-on-p4d/: README.md  img.tar
10-LoRA-Stable-Diffusion/: 01-scratch.ipynb
11-compile-gemma-inf2/: gsmoon_generation_demo.py
12-neuron-vllm-nxd-inference/: 01_TinyLlama-1.1B-Chat-v1.0.py  README.md  quick_start.py
13-vllm-mistral-8-7B-p4d/: 01_mistral__online_test.py
14-robert-inf2/: README.md
15-robert-inf2/: test_comparison_fixed.py  test_dual_encoder.py  test_hf_original.py
17-create-dataset-for-guard-rail/: CLAUDE.md  README.md
17-d-fine-model-inference-optimization/: .gitignore  CLAUDE.md  README.md  detail_info.md
17-d-fine-model-inference-optimization/setup/: pyproject.toml
18-create-dataset-for-guard-rail/: .gitignore  CLAUDE.md  README.md  results.md
19-cpu-load-forecasting/: .gitignore  CLAUDE.md  README-ko.md  README.md  requirements.txt
19-cpu-load-forecasting/setup/: pyproject.toml
(+124 files in other folders)
