[project]
name = "dfine-model-inference"
version = "0.1.0"
description = "D-FINE Model Inference Optimization"
readme = "README.md"
authors = [
    {name = "dfine-inference", email = "your-email@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.45.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "nvidia-ml-py>=12.560.30",
    "pycocotools>=2.0.8",
    "torch-tensorrt",
    "tensorrt>=10.0.0",
    "onnx>=1.14.0",
    "onnxruntime-gpu>=1.16.0",
    "onnxscript>=0.1.0",
    "nvidia-modelopt[torch]>=0.17.0",
    "tritonclient[all]>=2.42.0",
    "pycuda>=2024.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch-tensorrt = { index = "pytorch-cu126" }
