[project]
name = "cpu-load-forecasting"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "prophet>=1.1.0",
    "statsmodels>=0.14.0",
    "torch>=2.0.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "mlflow>=2.7.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "onnx>=1.14.0",
    "skl2onnx>=1.16.0",
    "onnxconverter-common>=1.14.0",
    "onnxmltools>=1.12.0",
]
